--- a/Art_Gallery/templates/index.html
+++ b/Art_Gallery/templates/index.html
@@ -1,4 +1,4 @@
-
+ 
 {% load static %}
 <!-- above inform Django that there are static files that need to be loaded in this index.html file -->
 
@@ -16,9 +16,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!--set browser tab icon-->
     <link rel="shortcut icon" type="image/ico" href="{% static 'images/tab_icon.jpg' %}">
+	<!-- these two files are needed to properly implement collapsable hamburger menu -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.0-beta1/css/bootstrap.min.css" />
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 	<!-- font awesome -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-	<!-- specify all static files so Django can detect them using DTL -->
+	<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+   <!-- specify all static files so Django can detect them using DTL -->
 	<!-- owl carousel -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.css">
@@ -26,64 +31,86 @@
 	<link rel="stylesheet" type="text/css" href="{% static 'plugins/OwlCarousel2-2.2.1/owl.carousel.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'plugins/OwlCarousel2-2.2.1/owl.theme.default.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'plugins/OwlCarousel2-2.2.1/animate.css' %}">	
+	<script src="{% static 'js/jquery.min.js' %}"></script>
+	<script src="{% static 'js/bootstrap.min.js' %}"></script>
 	<!-- custom css file -->
 	<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-	<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
+	<link href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/css/bootstrap4-toggle.min.css" rel="stylesheet">
+	<script src="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/js/bootstrap4-toggle.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
 	
 </head>
-
 <!-- background image. Ignore this error the syntax is correct -->
 <body style="background-image:url({% static 'images/bg2.jpg' %})" class="myBody">
 	<!-- NAVBAR -->
 
 	<!-- nav -->
-	<nav class="navbar navbar-expand-md navbar-toggleable-sm navbar-light" style="background-color:rgb(255, 250, 219);">
+	<nav class="navbar navbar-expand-md navbar-light" style="background-color:rgb(255, 250, 219);">
 		<!-- container pushes items more center as opposed to putting them at the edge of each end of the screen -->
 		<div class="container">
 			<!-- navbar brand is the title title -->
 			<a href="/" class="navbar-brand">Kaoru Art Gallery</a>
 			<!-- hamburger menu button  -->
-			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#toggleMobileMenu" aria-controls="toggleMobileMenu" aria-expanded="false" aria-label="Toggle navigation">
-				<!-- hamburger buttton icon -->
+			<button 
+			class="navbar-toggler" 
+			type="button" 
+			data-toggle="collapse" 
+			data-target="#navbarSupportedContent" 
+			aria-controls="navbarSupportedContent" 
+			aria-expanded="false" 
+			aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
+			
 			<!-- area that is collapsed inside the hamburger icon -->
-			<div class="collapse navbar-collapse" id="toggleMobileMenu">
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<!-- nav bar items (login, register, about, etc.) ms auto moves list items to right side-->
 				<ul class="navbar-nav ms-auto">
-					<li class="m-1">
-						<a class ="nav-link" href="/" title="View Shopping Cart">Cart</a>
-					</li> 
 					<!-- create conditions for displaying login/register or logout buttons -->
 					<!-- if user is logged in (has a cookie) show logout button-->
 					{% if user.is_authenticated %}
 						<!-- welcome user by using first name -->
-						<li class="nav-link m-1">Hello, {{user.first_name}}!</li>
-						<li class="m-1">
-							<a class="btn btn-outline-dark" href="/accounts/logout" title="log out">Log out</a>
+						<li class="nav-item m-1">Hello, {{user.first_name}}!</li>
+						<li class="nav-item m-1">
+							<a class="nav-link btn btn-outline-primary" href="/accounts/logout" title="log out">Log out</a>
 						</li>
 						
 						<!-- else if not logged in -->
 					{% else %}
 						<!-- redirect to login page -->
-						<li class="m-1">
-							<a class="btn btn-outline-dark" href="/accounts/login">Login</a>
+						<li class="nav-item m-1">
+							<a class="btn btn-outline-info" href="/accounts/login">Sign in</a>
 						</li>
 						<!-- redirect to login page -->
-						<li class="m-1">
-							<a class="btn btn-outline-dark" href="/accounts/register">Register</a>
+						<li class="nav-item m-1">
+							<a class="btn btn-outline-info" href="/accounts/register">Register</a>
 						</li>
 					{% endif %}
 					<!-- mercari icon -->
 					<li>
-						<a href="https://jp.mercari.com/user/profile/430366596" target="_blank" style="text-decoration:none;" title=" My Mercari ^_^">
+						<a class="nav-item m-1" href="https://jp.mercari.com/user/profile/430366596" target="_blank" style="text-decoration:none;" title=" My Mercari ^_^">
 							<img src="{% static 'images/svg_mercari_icon_red.svg' %}" alt="mercari" width="48" height="48" class="d-inline-block align-top"/>
 						</a>
 					</li>
+					<!-- cart -->
+					<!-- <li class="m-1">
+						<a class ="nav-link" href="/cart" title="View Shopping Cart">Cart</a>
+					</li>  -->
+					<!-- end cart -->
+					<!-- JP/EN toggler -->
+					<input class="language-toggler"
+					class="language-change" 
+					type="checkbox" 
+					checked data-toggle="toggle" 
+					data-on="日本語" 
+					data-off="English" 
+					data-onstyle="success" 
+					data-offstyle="info">
+					<!-- end JP/EN toggler -->
 				</ul>
 			</div>
 		</div>
-		
 	</nav>
 	<!-- END NAVBAR -->
 	<!-- login page see login.html -->
@@ -92,9 +119,9 @@
     </div>
 
 	<!--  PORTRAIT SECTION -->
-	<section class="gallery min-vh-100">
+	<section class="gallery min-vh-100" >
 		<div class="container-lg">
-			<!-- Portrait page see painting1.html -->
+			<!-- carousel page see carousel.html -->
 			<div class="carousel">
 				{% block carousel1_content %}{% endblock %}
 			</div>
@@ -103,28 +130,36 @@
 				row-cols-sm-2 means 2 columns for small screens < 576px
 				row-cols-md-3 means 3 columns for medium screens >= 768px
 			-->
-			<div class="row gy-5 row-cols-2 row-cols-sm-2 row-cols-md-3 ">
-				
+			<div class="row gy-5 row-cols-1 row-cols-sm-2 row-cols-md-3 ">
 				{% for paintingData in paintingObjects %}
 					<!-- posting images-->
-					<div class="col">
-						<div class="painting_title gallery-item"><p id="painting_name">{{paintingData.name}}</p> 
-						</div>
-						<!-- this class is what streamlines all image sizes dynamically -->
-						<div class= "imagehover">
-								<!-- making static images as baseURL variable called url, useful for dynamically adding images 
-								painting is the model datafield in models.py
-								gallery-item used by main.js -->
-								<img src="{{paintingData.painting.url}}" class="gallery-item gallery-link" id="{{paintingData.pk}}"
-								data-toggle="modal" 
-								data-target="painting-modal" 
-								data-name="{{paintingData.name}}" 
-								data-description="{{ paintingData.short_description }}"
-								data-price="${{ paintingData.price }}">
-						</div>
-						<div class="painting-details">
-							<!-- jinja format -->
-							<div class="painting_price gallery-item">${{paintingData.price}}</div>
+					<div class="card-deck">
+						<div class="card">
+							<div>
+								<h4 class= "card-title text-center" id="painting_name">{{paintingData.name}}
+								</h4> 
+							</div>
+							<p class="card-text">{{paintingData.short_description}}</p>
+							<!-- this class is what streamlines all image sizes dynamically -->
+							<div class= "card-img imagehover p-3">
+									<!-- making static images as baseURL variable called url, useful for dynamically adding images 
+									painting is the model datafield in models.py
+									gallery-item used by main.js -->
+									<a class="carousel-click" id="{{paintingData.pk}}" href="/carousel/">
+										<img src="{{paintingData.painting.url}}" />
+									</a>
+									<!-- THIS IS MODAL CODE, KEEPING IT FOR FUTURE POSSIBLE USE -->
+									<!-- <img src="{{paintingData.painting.url}}" class="gallery-item gallery-link" id="{{paintingData.pk}}"
+									data-toggle="modal" 
+									data-target="painting-modal" 
+									data-name="{{paintingData.name}}" 
+									data-description="{{ paintingData.short_description }}"
+									data-price="${{ paintingData.price }}"> -->
+							</div>
+							<!-- </div> -->
+							<div class="row text-center">
+								<p class="col font-weight-bold">${{paintingData.price}}</p>
+							</div>
 						</div>
 					</div>
 				{% endfor %}
@@ -187,16 +222,15 @@
 
 	    <!-- jquery for carousel -->
     <!-- jquery -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <!-- owl carousel -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
 	<!-- When a link is clicked, grab all the data values and pop them inro the modal -->
 	<script type="text/javascript">
 
-		// JQuery start for modal
+		// JQuery start for modal -- not being used but kept for future possible use
 		$('.gallery-link').click(function(){
 			// get the primary key
-			prime_key = $(this).attr("id");
+			// prime_key = $(this).attr("id");
 			// MODAL START
 			// painting name
 			$('#painting-name').html($(this).data('name'));
@@ -208,13 +242,14 @@
 			//painting price
 			$('#modal-price').html($(this).data('price'));
 			// show the modal
-			$('#painting-modal').modal('show');
+			//$('#painting-modal').modal('show');
 			// END MODAL
 		});
 		// END JQuery modal
 
 		// AJAX
 		$('.carousel-click').click(function(){
+			prime_key = $(this).attr("id");
 			$.ajax({
 				type: "GET",
 				// A string containing the URL to which the request is sent.
@@ -232,14 +267,13 @@
 	</script>
 
 
-	<script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+	<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script> 
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script> 
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"></script>
+	<!-- <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script> -->
 	<script src="{% static 'js/main.js' %}"></script>
-	
-	<script src="{% static 'js/popper.js' %}"></script>
-	<script src="{% static 'js/bootstrap.min.js' %}"></script>
 	<script src="{% static 'plugins/OwlCarousel2-2.2.1/owl.carousel.js' %}"></script>
-	<script src="{% static 'js/jquery.scrollTo.min.js' %}"></script>
-	<script src="{% static 'js/easing.js' %}"></script>
 	<script src="{% static 'js/parallax.min.js' %}"></script>
+	
 	</body>
 </html>
