--- a/Art_Gallery/templates/index.html
+++ b/Art_Gallery/templates/index.html
@@ -99,7 +99,7 @@
 					</li>  -->
 					<!-- end cart -->
 					<!-- JP/EN toggler -->
-					<input class="language-toggler"
+					<input
 					class="language-change" 
 					type="checkbox" 
 					checked data-toggle="toggle" 
