update card title padding

--- a/Art_Gallery/templates/index.html
+++ b/Art_Gallery/templates/index.html
@@ -136,10 +136,10 @@
 					<div class="card-deck">
 						<div class="card">
 							<div>
-								<h4 class= "card-title text-center" id="painting_name">{{paintingData.name}}
+								<h4 class= "card-title text-start p-3" id="painting_name">{{paintingData.name}}
 								</h4> 
 							</div>
-							<p class="card-text">{{paintingData.short_description}}</p>
+							<p class="card-text text-center">{{paintingData.short_description}}</p>
 							<!-- this class is what streamlines all image sizes dynamically -->
 							<div class= "card-img imagehover p-3">
 									<!-- making static images as baseURL variable called url, useful for dynamically adding images 
