--- a/Art_Gallery/templates/login.html
+++ b/Art_Gallery/templates/login.html
@@ -10,7 +10,7 @@
                         <!-- CARD -->
                         <div class="card credintial-card">
                             <div class="card-body">
-                                <h2 class="card-title p-3">Sign in</h2>
+                                <h2 class="card-title p-3">Sign in to your account</h2>
                                 <!-- error messages -->
                                 <div class="ms-auto text-danger">
                                     {% for message in messages %}
