--- a/Art_Gallery/templates/carousel.html
+++ b/Art_Gallery/templates/carousel.html
@@ -1,4 +1,6 @@
 {% extends "index.html" %}
+{% load i18n %}
+
 {% load static %}
 <!-- when you want to use images, use this jinja format to create a variable -->
 {% static "images" as baseUrl %}
