--- a/Art_Gallery/templates/myaccount.html
+++ b/Art_Gallery/templates/myaccount.html
@@ -1,4 +1,6 @@
 {% extends "index.html" %}
+{% load i18n %}
+
 {% block title %} My Account {% endblock %}
 {% load static %}
 {% static "images" as baseUrl %}
